refacto and reorg

--- a/quick_test.ipynb
+++ b/quick_test.ipynb
@@ -86,7 +86,7 @@
     "# ax.quiver(traj['x'][indexes], traj['y'][indexes], y['dx'][indexes], y['dy'][indexes],  angles=\"xy\", label=\"vec ground truth\")\n",
     "# ax.quiver(traj['x'][indexes], traj['y'][indexes], traj['dx'][indexes], traj['dy'][indexes], angles=\"xy\", color=\"green\", label=\"vec user\")\n",
     "\n",
-    "ax.plot(traj['x'][:index], traj['y'][:index], '.', label=\"trajectoire\")\n",
+    "# ax.plot(traj['x'][:index], traj['y'][:index], '.', label=\"trajectoire\")\n",
     "ax.plot(targets['x_to'][indexes], targets['y_to'][indexes], 'rx', label=\"target\")\n",
     "ax.set_title(\"vector loss\")\n",
     "ax.set_xlabel(\"x in pixels\")\n",
