train cgp non converging but it is existing

--- a/quick_test.ipynb
+++ b/quick_test.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x71e2c210a090>"
+       "<matplotlib.legend.Legend at 0x7790ee577a90>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -27,12 +27,10 @@
     }
    ],
    "source": [
-    "from dataset_handling import *\n",
+    "from utils.dataset_handling import read_dataset\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.signal import savgol_filter\n",
-    "\n",
-    "pd.options.mode.chained_assignment = None\n",
-    "\n",
     "\n",
     "(traj, y, targets) = read_dataset(\"/home/jmartinsaquet/Documents/code/IA2_codes/clone/datasets/P0_C0.csv\", \"vec\")\n",
     "\n",
@@ -97,10 +95,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4,  0,  1,  5,  2,  2,  0,  4,  5,  3,  4,  0,  4,  2,  7,  2,  4,\n",
+       "        1,  0,  5,  5,  2,  3,  3,  4,  3,  8,  0,  1, 12,  2,  8, 12,  1,\n",
+       "        1,  8,  3,  1, 13,  2, 12,  3,  4,  1, 16,  5, 18, 11,  2,  4, 19,\n",
+       "        2,  9, 13,  4, 18, 13,  1, 20, 21,  3, 19, 22,  0,  5, 21,  5, 19,\n",
+       "        1,  0,  0, 10,  0,  0,  2,  1, 22,  4,  5, 17, 18,  2,  5, 26,  5,\n",
+       "       22, 20,  2,  8, 20, 33, 31])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pyCGP import pycgp\n",
+    "from pyCGP.pycgp.evaluators.srevaluator import DEFAULT_SR_LIBRARY\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "\n",
+    "g = pycgp.CGP_with_cste.random(4, 2, 0, 30, 1, DEFAULT_SR_LIBRARY, -1, False, 0, 1, (10, ), np.float128 )\n",
+    "g.genome\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
